[tool.poetry]
name = "prep"
version = "0.0.1"
description = ""
authors = ["Alexander Engels <alexander.engels@outlook.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
polars = "^0.17.14"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"