[tool.poetry]
name = "prep"
version = "0.0.1"
description = ""
authors = ["Alexander Engels <alexander.engels@outlook.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
polars = "^0.19.9"
pyarrow = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
jupyter = "^1.0.0"
notebook = "^6.5.1"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"