[tool.poetry]
name = "prep"
version = "0.0.1"
description = ""
authors = ["Alexander Engels <alexander.engels@outlook.de>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "~1"
pandas = "~1"
polars = "~0"
pyarrow = "~8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
jupyter = "^1.0.0"
notebook = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"